VO-2478 Ensure custom radio buttons do not overlap each other.

--- a/app/styles/common/_calendar.scss
+++ b/app/styles/common/_calendar.scss
@@ -254,7 +254,7 @@
 
   .nxg-fancy-radios {
     position: absolute;
-    top: 8px;
+    top: 5px;
     right: 40px;
     width: 150px;
   }
